--- a/SmartLearn/SmartLearn/Areas/Admin/Views/Course/Index.cshtml
+++ b/SmartLearn/SmartLearn/Areas/Admin/Views/Course/Index.cshtml
@@ -20,9 +20,7 @@
         <th>
             @Html.DisplayNameFor(model => model.TrainerName)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category_Name)
-        </th>
+
         
     </tr>
 
@@ -40,9 +38,7 @@
 
         
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ID })
         </td>
     </tr>
 }
